--- a/lib/src/dashboard_component/post_engagement_component/post_engagement_component.html
+++ b/lib/src/dashboard_component/post_engagement_component/post_engagement_component.html
@@ -129,7 +129,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-12 col-md-7 chat-container m-0 p-0 box-one br-20 shadow">
+        <div class="col-sm-12 col-md-7 chat-container m-0 p-0 {{appTheme['box-one']}} br-20 shadow">
             <div class="w-100 text-center p-2 box-three br-20 shadow my-auto">
                 <span class="font-weight-bold">Engagement Room</span>
                 <span class="fa fa-home mx-2 text-primary"></span>
