--- a/lib/src/dashboard_component/manage_post_component/manage_post_component.html
+++ b/lib/src/dashboard_component/manage_post_component/manage_post_component.html
@@ -11,9 +11,9 @@
     <div class="col-lg-4 col-md-12 col-sm-12 mb-md-3 mb-0">
         <div class="row">
             <div class="col-sm-12 col-md-6 col-lg-12">
-                <div class="card shadow-c bg-transparent box-one br-20 border-0">
+                <div class="card shadow-c bg-transparent {{appTheme['box-one']}} br-20 border-0">
                     <div class="card-body">
-                        <div class="text-center h6 text-muted">Create Schedule</div>
+                        <div class="text-center h6 {{appTheme['text-muted']}} mb-2">Create Schedule</div>
                         <form novalidate>
                             <div class="form-group">
                                 <input type="text"
@@ -52,14 +52,14 @@
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-12">
-                <div class="card shadow-c bg-transparent box-one br-20 border-0 py-3 mt-3 my-3" style="height: 220px">
+                <div class="card shadow-c bg-transparent {{appTheme['box-one']}} br-20 border-0 py-3 mt-3 my-3" style="height: 220px">
                     <div class="card bg-transparent br-20 border-0 mx-0" id="scheduled-posts">
                         <div class="card-body">
-                            <div class="text-center h6 text-muted mb-3">Scheduled Posts</div>
+                            <div class="text-center h6 {{appTheme['text-muted']}} mb-3">Scheduled Posts</div>
                             <div *ngIf="scheduledPosts.isNotEmpty" class="px-3">
                                 <div *ngFor="let scheduledPost of scheduledPosts; let $i = index" class="row py-1 bg-light br-20 mb-2">
                                     <div class="col-9">
-                                <span class="text-muted d-post-text py-1">
+                                <span class="{{appTheme['text-muted']}} d-post-text py-1">
                                     {{scheduledPost.title}}
                                 </span>
                                     </div>
@@ -69,7 +69,7 @@
                                 </div>
                             </div>
 
-                            <div class="mt-5 text-muted text-center" *ngIf="scheduledPosts.isEmpty">
+                            <div class="mt-5 {{appTheme['text-muted']}} text-center" *ngIf="scheduledPosts.isEmpty">
                                 No schedule created
                             </div>
                         </div>
@@ -79,7 +79,7 @@
         </div>
     </div>
     <div class="col-lg-8 col-md-12 col-sm-12 mb-3">
-        <div class="card shadow-c border-0 bg-transparent box-one br-20">
+        <div class="card shadow-c border-0 bg-transparent {{appTheme['box-one']}} br-20">
             <div class="card-body">
                 <form novalidate #filterForm="ngForm" (ngSubmit)="onSubmit()" class="d-block d-md-none d-lg-none">
                     <material-expansionpanel-set flat>
@@ -147,21 +147,21 @@
                     </div>
                 </form>
                 <div class="row mt-2 mr-auto ml-auto" id="manage_box">
-                    <div class="card border-0 box-one w-100 p-2 br-20" *ngIf="filteredPosts.isNotEmpty">
+                    <div class="card border-0 {{appTheme['box-one']}} w-100 p-2 br-20" *ngIf="filteredPosts.isNotEmpty">
                         <div class="card-body">
                             <div class="row c-bordered box-three sticky-top">
                                 <div class="col-2">
                                     <material-checkbox [(checked)]="allIsChecked" (click)="getAllIds()"></material-checkbox>
                                 </div>
                                 <div class="col-6 my-auto">
-                                    <div class="text-muted">Post message</div>
+                                    <div class="{{appTheme['text-muted']}}">Post message</div>
                                 </div>
                                 <div class="col-4 my-auto">
-                                    <div class="text-muted">Post tags</div>
+                                    <div class="{{appTheme['text-muted']}}">Post tags</div>
                                 </div>
                             </div>
 
-                            <div class="row c-bordered box-two" *ngFor="let filteredPost of filteredPosts; let $i=index">
+                            <div class="row c-bordered {{appTheme['box-two']}}" *ngFor="let filteredPost of filteredPosts; let $i=index">
                                 <div class="col-2">
                                     <material-checkbox class="my-0"
                                                        [(checked)]="filteredPost.checkedState" (click)="getId($i)">
@@ -177,8 +177,8 @@
                         </div>
                     </div>
                     <div *ngIf="filteredPosts.isEmpty && !loading">
-                        <div class="nt-center text-muted" style="width: max-content;">
-                            <span class="fa fa-cloud text-muted mr-1"></span>
+                        <div class="nt-center {{appTheme['text-muted']}}" style="width: max-content;">
+                            <span class="fa fa-cloud {{appTheme['text-muted']}} mr-1"></span>
                             {{emptyMessage}}
                             <button type="button" class="btn btn-sm btn-outline-primary br-20 ml-2" *ngIf="createNeed" [routerLink]="InnerRoutePaths.create_post.toUrl()">
                                 <span class="fa fa-plus-circle mr-1"></span>Create post
@@ -186,7 +186,7 @@
                         </div>
                     </div>
                     <div *ngIf="filteredPosts.isEmpty && loading">
-                        <div class="nt-center text-muted">
+                        <div class="nt-center {{appTheme['text-muted']}}">
                             <img src="img/load.gif" alt="Loading..." class="img-fluid">
                         </div>
                     </div>
