--- a/lib/src/dashboard_component/post_account_component/post_account_component.html
+++ b/lib/src/dashboard_component/post_account_component/post_account_component.html
@@ -1,9 +1,11 @@
 <div class="container mt-3" id="body" (click)="setDefault()">
+    <h5 class="text-center font-weight-bold {{appTheme['text-muted']}} mt-3">Post Accounts</h5>
+    <div class="text-center figure-caption {{appTheme['text-colour']}} mb-4">Add accounts under any of the sections</div>
     <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-12 mb-3 mb-sm-3" id="fb">
-            <div class="card border-0 bg-transparent box-one c-bordered br-20 shadow-c">
-                <div class="card-header bg-transparent border-0 box-one mt-0 n-mt-1 br-20">
-                    <span class="float-left ml-3">Facebook</span>
+            <div class="card border-0 bg-transparent {{appTheme['box-one']}} c-bordered br-20 shadow-c">
+                <div class="card-header bg-transparent border-0 {{appTheme['box-one']}} mt-0 n-mt-1 br-20">
+                    <span class="float-left ml-3 {{appTheme['text-colour']}}">Facebook</span>
                     <span class="float-right mr-3 fa fa-facebook text-primary mt-1"></span>
                 </div>
                 <div class="card-body m-2">
@@ -21,14 +23,14 @@
                             </button>
                         </span>
                     </div>
-                    <div class="text-center mt-5 text-muted">{{ accountCount }} accounts</div>
+                    <div class="text-center mt-5 {{appTheme['text-muted']}}">{{ accountCount }} accounts</div>
                 </div>
             </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12 mb-3 mb-sm-3">
-            <div class="card border-0 bg-transparent box-one c-bordered br-20 shadow-c">
-                <div class="card-header bg-transparent border-0 box-one n-mt-1 mt-0 br-20">
-                    <span class="float-left ml-3">Twitter</span>
+            <div class="card border-0 bg-transparent {{appTheme['box-one']}} c-bordered br-20 shadow-c">
+                <div class="card-header bg-transparent border-0 {{appTheme['box-one']}} n-mt-1 mt-0 br-20">
+                    <span class="float-left ml-3 {{appTheme['text-colour']}}">Twitter</span>
                     <span class="float-right mr-3 fa fa-twitter text-primary mt-1"></span>
                 </div>
                 <div class="card-body m-2">
@@ -46,14 +48,14 @@
                             </button>
                         </span>
                     </div>
-                    <div class="text-center mt-5 text-muted">0 accounts</div>
+                    <div class="text-center mt-5 {{appTheme['text-muted']}}">0 accounts</div>
                 </div>
             </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12 mb-3 mb-sm-3">
-            <div class="card border-0 bg-transparent box-one c-bordered br-20 shadow-c">
-                <div class="card-header bg-transparent border-0 box-one n-mt-1 mt-0 br-20">
-                    <span class="float-left ml-3">Instagram</span>
+            <div class="card border-0 bg-transparent {{appTheme['box-one']}} c-bordered br-20 shadow-c">
+                <div class="card-header bg-transparent border-0 {{appTheme['box-one']}} n-mt-1 mt-0 br-20">
+                    <span class="float-left ml-3 {{appTheme['text-colour']}}">Instagram</span>
                     <span class="float-right mr-3 fa fa-instagram text-danger mt-1"></span>
                 </div>
                 <div class="card-body m-2">
@@ -71,15 +73,15 @@
                             </button>
                         </span>
                     </div>
-                    <div class="text-center mt-5 text-muted">0 accounts</div>
+                    <div class="text-center mt-5 {{appTheme['text-muted']}}">0 accounts</div>
                 </div>
             </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12 mb-3 mb-sm-3">
-            <div class="card border-0 bg-transparent box-one c-bordered br-20 shadow-c">
-                <div class="card-header bg-transparent border-0 box-one n-mt-1 mt-0 br-20">
-                    <span class="float-left ml-3">LinkedIn</span>
-                    <span class="float-right mr-3 fa fa-linkedin-in text-dark mt-1"></span>
+            <div class="card border-0 bg-transparent {{appTheme['box-one']}} c-bordered br-20 shadow-c">
+                <div class="card-header bg-transparent border-0 {{appTheme['box-one']}} n-mt-1 mt-0 br-20">
+                    <span class="float-left ml-3 {{appTheme['text-colour']}}">LinkedIn</span>
+                    <span class="float-right mr-3 fa fa-linkedin-in {{appTheme['text-colour']}} mt-1"></span>
                 </div>
                 <div class="card-body m-2">
                     <div class="text-center">
@@ -96,7 +98,7 @@
                             </button>
                         </span>
                     </div>
-                    <div class="text-center mt-5 text-muted">0 accounts</div>
+                    <div class="text-center mt-5 {{appTheme['text-muted']}}">0 accounts</div>
                 </div>
             </div>
         </div>
@@ -111,7 +113,7 @@
     </div>
 
     <div class="font-nyata">
-        <div class="text-center mt-4 text-muted">
+        <div class="text-center mt-4 {{appTheme['text-colour']}}">
             {{ mediaName }}
         </div>
     </div>
@@ -135,19 +137,19 @@
 <div class="dialog-box card bg-transparent border-0 shadow-c br-20" id="view-dialog" display="false">
 
     <div class="font-nyata">
-        <div class="text-center mt-4 text-muted">
+        <div class="text-center mt-4 {{appTheme['text-colour']}}">
             {{ mediaName }} Accounts
         </div>
     </div>
 
     <div class="my-4 px-2" *ngIf="mediaName=='Facebook'">
-        <div class="card bg-transparent box-one mb-1 border-0 c-bordered border-0 br-20" *ngIf="accountEmails.isNotEmpty">
+        <div class="card bg-transparent {{appTheme['box-one']}} mb-1 border-0 c-bordered border-0 br-20" *ngIf="accountEmails.isNotEmpty">
             <div *ngFor="let email of accountEmails; let $i=index" class="card-body border-0 row">
-                <span class="fa fa-user-circle col-3 mx-auto fa-2x text-muted my-auto"></span>
-                <div class="text-muted col-6 text-sm-left mx-auto my-auto d-post-text">
+                <span class="fa fa-user-circle col-3 mx-auto fa-2x {{appTheme['text-muted']}} my-auto"></span>
+                <div class="{{appTheme['text-muted']}} col-6 text-sm-left mx-auto my-auto d-post-text">
                     {{ email.username }}
                 </div>
-                <span class="fa fa-trash col-3 text-muted mx-auto my-auto" (click)="deleteFacebookAccount($i)"></span>
+                <span class="fa fa-trash col-3 {{appTheme['text-muted']}} mx-auto my-auto" (click)="deleteFacebookAccount($i)"></span>
             </div>
         </div>
         <div class="mb-1 p-3 border-0 c-bordered border-0 br-20" *ngIf="accountEmails.isEmpty">
@@ -162,16 +164,16 @@
         </div>
     </div>
     <div class="my-4 px-4" disabled="true" *ngIf="mediaName=='Twitter'">
-        <div class="card bg-transparent box-one mb-1 border-0 c-bordered border-0 br-20" *ngIf="accountEmails.isNotEmpty">
+        <div class="card bg-transparent {{appTheme['box-one']}} mb-1 border-0 c-bordered border-0 br-20" *ngIf="accountEmails.isNotEmpty">
             <div class="card-body border-0 row">
-                <span class="fa fa-user-circle col-3 mx-auto fa-2x text-muted my-auto"></span>
-                <div class="text-muted col-6 text-sm-left mx-auto my-auto d-post-text">
+                <span class="fa fa-user-circle col-3 mx-auto fa-2x {{appTheme['text-muted']}} my-auto"></span>
+                <div class="{{appTheme['text-muted']}} col-6 text-sm-left mx-auto my-auto d-post-text">
                     Nothing
                 </div>
-                <span class="fa fa-trash col-3 text-muted mx-auto my-auto"></span>
+                <span class="fa fa-trash col-3 {{appTheme['text-muted']}} mx-auto my-auto"></span>
             </div>
         </div>
-        <!--<div class="card bg-transparent box-one mb-1 border-0 c-bordered border-0 br-20" *ngIf="accountEmails.isEmpty">
+        <!--<div class="card bg-transparent {{appTheme['box-one']}} mb-1 border-0 c-bordered border-0 br-20" *ngIf="accountEmails.isEmpty">
             <div class="nt-center">
                 <div class="text-center">No account added</div>
             </div>
@@ -183,16 +185,16 @@
         </div>
     </div>
     <div class="my-4 px-4" disabled="true" *ngIf="mediaName=='Instagram'">
-        <div class="card bg-transparent box-one mb-1 border-0 c-bordered border-0 br-20" *ngIf="accountEmails.isNotEmpty">
+        <div class="card bg-transparent {{appTheme['box-one']}} mb-1 border-0 c-bordered border-0 br-20" *ngIf="accountEmails.isNotEmpty">
             <div class="card-body border-0 row">
-                <span class="fa fa-user-circle col-3 mx-auto fa-2x text-muted my-auto"></span>
-                <div class="text-muted col-6 text-sm-left mx-auto my-auto d-post-text">
+                <span class="fa fa-user-circle col-3 mx-auto fa-2x {{appTheme['text-muted']}} my-auto"></span>
+                <div class="{{appTheme['text-muted']}} col-6 text-sm-left mx-auto my-auto d-post-text">
                     Nothing
                 </div>
-                <span class="fa fa-trash col-3 text-muted mx-auto my-auto"></span>
+                <span class="fa fa-trash col-3 {{appTheme['text-muted']}} mx-auto my-auto"></span>
             </div>
         </div>
-        <!--<div class="card bg-transparent box-one mb-1 border-0 c-bordered border-0 br-20" *ngIf="accountEmails.isEmpty">
+        <!--<div class="card bg-transparent {{appTheme['box-one']}} mb-1 border-0 c-bordered border-0 br-20" *ngIf="accountEmails.isEmpty">
             <div class="nt-center">
                 <div class="text-center">No account added</div>
             </div>
@@ -204,16 +206,16 @@
         </div>
     </div>
     <div class="my-4 px-4" disabled="true" *ngIf="mediaName=='LinkedIn'">
-        <div class="card bg-transparent box-one mb-1 border-0 c-bordered border-0 br-20" *ngIf="accountEmails.isNotEmpty">
+        <div class="card bg-transparent {{appTheme['box-one']}} mb-1 border-0 c-bordered border-0 br-20" *ngIf="accountEmails.isNotEmpty">
             <div class="card-body border-0 row">
-                <span class="fa fa-user-circle col-3 mx-auto fa-2x text-muted my-auto"></span>
-                <div class="text-muted col-6 text-sm-left mx-auto my-auto d-post-text">
+                <span class="fa fa-user-circle col-3 mx-auto fa-2x {{appTheme['text-muted']}} my-auto"></span>
+                <div class="{{appTheme['text-muted']}} col-6 text-sm-left mx-auto my-auto d-post-text">
                     Nothing
                 </div>
-                <span class="fa fa-trash col-3 text-muted mx-auto my-auto"></span>
+                <span class="fa fa-trash col-3 {{appTheme['text-muted']}} mx-auto my-auto"></span>
             </div>
         </div>
-        <!--<div class="card bg-transparent box-one mb-1 border-0 c-bordered border-0 br-20" *ngIf="accountEmails.isEmpty">
+        <!--<div class="card bg-transparent {{appTheme['box-one']}} mb-1 border-0 c-bordered border-0 br-20" *ngIf="accountEmails.isEmpty">
             <div class="nt-center">
                 <div class="text-center">No account added</div>
             </div>
