--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,7 @@
     <script async defer src="js/popper.min.js"></script>
     <script async defer src="js/bootstrap.min.js"></script>
     <script async defer src="js/main.js"></script>
+<!--    <script async defer src="js/Chart.min.js"></script>-->
 
     <script async defer src="main.dart.js"></script>
 
@@ -20,7 +21,7 @@
   </head>
   <body>
     <postit-app>
-      <img src="img/load.gif" alt="Loading...." class="loading-gif">
+      <img src="img/load.gif" alt="Loading....." class="loading-gif">
     </postit-app>
   </body>
 </html>
