--- a/lib/src/dashboard_component/dashboard_component.html
+++ b/lib/src/dashboard_component/dashboard_component.html
@@ -1,6 +1,7 @@
 <!--Material Side bar-->
 <div id="app-body" class="{{appTheme['box-two']}}">
-    <material-drawer #drawer="drawer" temporary
+    <!--Temporary drawers-->
+    <!--<material-drawer #drawer="drawer" temporary
                      [class.custom-width]="customWidth"
                      [attr.end]="end ? '' : null"
                      [attr.overlay]="overlay ? '' : null"
@@ -75,7 +76,7 @@
                     </ul>
                 </div>
             </div>
-            <!-- Here is a group without a label -->
+            &lt;!&ndash; Here is a group without a label &ndash;&gt;
             <div group class="p-3 border-0 font-nyata mt-4">
                 <material-list-item @deferred [routerLink]="InnerRoutePaths.dash_home.toUrl()" [routerLinkActive]="'active_side'">
                     <material-icon icon="home" class="{{appTheme['text-muted']}}"></material-icon>Home
@@ -100,11 +101,235 @@
                     <material-icon icon="settings" class="{{appTheme['text-muted']}}"></material-icon>Settings
                 </material-list-item>
             </div>
-            <!-- This group has a label -->
+            &lt;!&ndash; This group has a label &ndash;&gt;
         </material-list>
-    </material-drawer>
+    </material-drawer>-->
+    <!--/Temporary drawers-->
 
-    <!--Page Content-->
+    <!--Expandable permanent drawer -->
+    <!--<material-drawer permanent id="permanent-expandable-drawer" class="small-drawer">
+        <material-list style="overflow-x: hidden; overflow-y: scroll;">
+            <div *ngIf="isPerExpanded">
+                <div class="text-center py-3 w-50 mx-auto">
+                    <div class="card bg-light br-20 py-4 border-0">
+                        <span class="fa fa-user-circle fa-3x"></span>
+                    </div>
+                </div>
+                <div class="dropdwn">
+                    <div class="text-center font-weight-bold text-muted cursor-pointer" id="account" (click)="toggleDropdwn()">
+                        {{data['admin_first_name']}} {{data['admin_last_name']}}
+                        <span class="ml-2 fa fa-caret-down"></span>
+                    </div>
+                    <div class="dropdwn-content pb-0 mb-0 br-20" id="dropdwn-content">
+                        <ul class="list-unstyled">
+                            <div class="px-3 pt-3">
+                                <li class="pr-1">
+                                    <div class="row mx-0">
+                                        <div class="col-4 pr-0">
+                                            <div class="icon-circle">
+                                                <span class="text-center fa fa-user"></span>
+                                            </div>
+                                        </div>
+                                        <div class="col-8 px-0">
+                                            <a href="#" class="nav-link text-muted my-auto small font-weight-bold">Profile</a>
+                                        </div>
+                                    </div>
+                                </li>
+                                <div class="dropdown-divider"></div>
+                                <li class="pr-1 mb-2">
+                                    <div class="row mx-0">
+                                        <div class="col-4 pr-0">
+                                            <div class="icon-circle bg-gradient-green">
+                                                <span class="text-center fa fa-gears"></span>
+                                            </div>
+                                        </div>
+                                        <div class="col-8 px-0">
+                                            <a href="#" class="nav-link text-muted my-auto small font-weight-bold">Settings</a>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="pr-1">
+                                    <div class="row mx-0">
+                                        <div class="col-4 pr-0">
+                                            <div class="icon-circle">
+                                                <span class="text-center fa fa-users"></span>
+                                            </div>
+                                        </div>
+                                        <div class="col-8 px-0">
+                                            <a href="#" class="nav-link text-muted my-auto small font-weight-bold">Accounts</a>
+                                        </div>
+                                    </div>
+                                </li>
+                                <div class="dropdown-divider"></div>
+                                <li class="pr-1 cursor-pointer" (click)="showDialog()">
+                                    <div class="row mx-0">
+                                        <div class="col-4 pr-0">
+                                            <div class="icon-circle bg-gradient-danger">
+                                                <span class="text-center fa fa-sign-out"></span>
+                                            </div>
+                                        </div>
+                                        <div class="col-8 px-0">
+                                            <a class="nav-link text-muted my-auto small font-weight-bold">Logout</a>
+                                        </div>
+                                    </div>
+                                </li>
+                            </div>
+                            <li class="mt-3 mx-0 p-0 w-100 background"></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="mt-4 text-center mb-2" *ngIf="!isPerExpanded">
+                <material-icon icon="person_outline"></material-icon>
+            </div>
+            <div group class="border-0 font-nyata mt-4" [class.p-3]="isPerExpanded">
+                <material-list-item @deferred [routerLink]="InnerRoutePaths.dash_home.toUrl()" [routerLinkActive]="'active_side'">
+                    <material-icon icon="home" class="{{appTheme['text-muted']}}"></material-icon><span class="side-text">Home</span>
+                </material-list-item>
+                <material-list-item @deferred [routerLink]="InnerRoutePaths.create_post.toUrl()" [routerLinkActive]="'active_side'">
+                    <material-icon icon="add_circle" class="{{appTheme['text-muted']}}"></material-icon><span class="side-text">Create Post</span>
+                </material-list-item>
+                <material-list-item @deferred [routerLink]="InnerRoutePaths.view_post.toUrl()" [routerLinkActive]="'active_side'">
+                    <material-icon icon="visibility" class="{{appTheme['text-muted']}}"></material-icon><span class="side-text">View Post</span>
+                </material-list-item>
+                <material-list-item @deferred [routerLink]="InnerRoutePaths.manage_post.toUrl()" [routerLinkActive]="'active_side'">
+                    <material-icon icon="timer" class="{{appTheme['text-muted']}}"></material-icon><span class="side-text">Manage Post</span>
+                </material-list-item>
+                <material-list-item @deferred [routerLink]="InnerRoutePaths.post_engagement.toUrl()" [routerLinkActive]="'active_side'">
+                    <material-icon icon="chat" class="{{appTheme['text-muted']}}"></material-icon><span class="side-text">Engagement</span>
+                </material-list-item>
+                <div label class="my-2 {{appTheme['text-colour']}}" *ngIf="isPerExpanded">Accounts</div>
+                <material-list-item @deferred [routerLink]="InnerRoutePaths.post_account.toUrl()" [routerLinkActive]="'active_side'">
+                    <material-icon icon="person" class="{{appTheme['text-muted']}}"></material-icon><span class="side-text">Post Accounts</span>
+                </material-list-item>
+                <material-list-item @deferred [routerLink]="InnerRoutePaths.setting.toUrl()" [routerLinkActive]="'active_side'">
+                    <material-icon icon="settings" class="{{appTheme['text-muted']}}"></material-icon><span class="side-text">Settings</span>
+                </material-list-item>
+            </div>
+            <div class="text-center mt-0 pt-0 mb-2 border-0" [class.mt-4]="!isPerExpanded">
+                <div class="nt-circle bg-primary add-button" (click)="togglePerWidth()">
+                    <span class="fa fa-chevron-right text-white" *ngIf="!isPerExpanded"></span>
+                    <span class="fa fa-chevron-left text-white" *ngIf="isPerExpanded"></span>
+                </div>
+            </div>
+        </material-list>
+
+
+    </material-drawer>-->
+    <!--/Expandable permanent drawer -->
+
+    <!--Expandable persistent drawer-->
+    <material-drawer persistent #drawer="drawer" id="persistent-expandable-drawer" class="small-drawer" [attr.end]="end ? '' : null">
+        <material-list *deferredContent style="overflow-x: hidden; overflow-y: scroll;">
+            <div *ngIf="isExpanded">
+                <div class="text-center py-3 w-50 mx-auto">
+                    <div class="card bg-light br-20 py-4 border-0">
+                        <span class="fa fa-user-circle fa-3x"></span>
+                    </div>
+                </div>
+                <div class="dropdwn">
+                    <div class="text-center font-weight-bold text-muted cursor-pointer" id="account" (click)="toggleDropdwn()">
+                        {{data['admin_first_name']}} {{data['admin_last_name']}}
+                        <span class="ml-2 fa fa-caret-down"></span>
+                    </div>
+                    <div class="dropdwn-content pb-0 mb-0 br-20" id="dropdwn-content">
+                        <ul class="list-unstyled">
+                            <div class="px-3 pt-3">
+                                <li class="pr-1">
+                                    <div class="row mx-0">
+                                        <div class="col-4 pr-0">
+                                            <div class="icon-circle">
+                                                <span class="text-center fa fa-user"></span>
+                                            </div>
+                                        </div>
+                                        <div class="col-8 px-0">
+                                            <a href="#" class="nav-link text-muted my-auto small font-weight-bold">Profile</a>
+                                        </div>
+                                    </div>
+                                </li>
+                                <div class="dropdown-divider"></div>
+                                <li class="pr-1 mb-2">
+                                    <div class="row mx-0">
+                                        <div class="col-4 pr-0">
+                                            <div class="icon-circle bg-gradient-green">
+                                                <span class="text-center fa fa-gears"></span>
+                                            </div>
+                                        </div>
+                                        <div class="col-8 px-0">
+                                            <a href="#" class="nav-link text-muted my-auto small font-weight-bold">Settings</a>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="pr-1">
+                                    <div class="row mx-0">
+                                        <div class="col-4 pr-0">
+                                            <div class="icon-circle">
+                                                <span class="text-center fa fa-users"></span>
+                                            </div>
+                                        </div>
+                                        <div class="col-8 px-0">
+                                            <a href="#" class="nav-link text-muted my-auto small font-weight-bold">Accounts</a>
+                                        </div>
+                                    </div>
+                                </li>
+                                <div class="dropdown-divider"></div>
+                                <li class="pr-1 cursor-pointer" (click)="showDialog()">
+                                    <div class="row mx-0">
+                                        <div class="col-4 pr-0">
+                                            <div class="icon-circle bg-gradient-danger">
+                                                <span class="text-center fa fa-sign-out"></span>
+                                            </div>
+                                        </div>
+                                        <div class="col-8 px-0">
+                                            <a class="nav-link text-muted my-auto small font-weight-bold">Logout</a>
+                                        </div>
+                                    </div>
+                                </li>
+                            </div>
+                            <li class="mt-3 mx-0 p-0 w-100 background"></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="mt-4 text-center mb-2" *ngIf="!isExpanded">
+                <material-icon icon="person_outline"></material-icon>
+            </div>
+            <div group class="border-0 font-nyata mt-4" [class.p-3]="isExpanded">
+                <material-list-item @deferred [routerLink]="InnerRoutePaths.dash_home.toUrl()" [routerLinkActive]="'active_side'">
+                    <material-icon icon="home" class="{{appTheme['text-muted']}}"></material-icon><span class="side-text">Home</span>
+                </material-list-item>
+                <material-list-item @deferred [routerLink]="InnerRoutePaths.create_post.toUrl()" [routerLinkActive]="'active_side'">
+                    <material-icon icon="add_circle" class="{{appTheme['text-muted']}}"></material-icon><span class="side-text">Create Post</span>
+                </material-list-item>
+                <material-list-item @deferred [routerLink]="InnerRoutePaths.view_post.toUrl()" [routerLinkActive]="'active_side'">
+                    <material-icon icon="visibility" class="{{appTheme['text-muted']}}"></material-icon><span class="side-text">View Post</span>
+                </material-list-item>
+                <material-list-item @deferred [routerLink]="InnerRoutePaths.manage_post.toUrl()" [routerLinkActive]="'active_side'">
+                    <material-icon icon="timer" class="{{appTheme['text-muted']}}"></material-icon><span class="side-text">Manage Post</span>
+                </material-list-item>
+                <material-list-item @deferred [routerLink]="InnerRoutePaths.post_engagement.toUrl()" [routerLinkActive]="'active_side'">
+                    <material-icon icon="chat" class="{{appTheme['text-muted']}}"></material-icon><span class="side-text">Engagement</span>
+                </material-list-item>
+                <div label class="my-2 {{appTheme['text-colour']}}" *ngIf="isExpanded">Accounts</div>
+                <material-list-item @deferred [routerLink]="InnerRoutePaths.post_account.toUrl()" [routerLinkActive]="'active_side'">
+                    <material-icon icon="person" class="{{appTheme['text-muted']}}"></material-icon><span class="side-text">Post Accounts</span>
+                </material-list-item>
+                <material-list-item @deferred [routerLink]="InnerRoutePaths.setting.toUrl()" [routerLinkActive]="'active_side'">
+                    <material-icon icon="settings" class="{{appTheme['text-muted']}}"></material-icon><span class="side-text">Settings</span>
+                </material-list-item>
+            </div>
+            <div class="text-center mt-0 pt-0 mb-2 border-0" [class.mt-4]="!isExpanded">
+                <div class="nt-circle bg-primary add-button" (click)="toggleWidth()">
+                    <span class="fa fa-chevron-right text-white" *ngIf="!isExpanded"></span>
+                    <span class="fa fa-chevron-left text-white" *ngIf="isExpanded"></span>
+                </div>
+            </div>
+        </material-list>
+
+
+    </material-drawer>
+    <!--/Expandable persistent drawer-->
+
     <material-content>
         <!--    Material navbar-->
         <header class="material-header header-custom" style="z-index: 1030 !important;">
@@ -119,7 +344,7 @@
 
                 <!--            <span class="material-header-title ml-2">Postit</span>-->
 
-                <nav class="material-navigation ml-auto">
+                <nav class="material-navigation ml-auto" style="position: fixed; right: 1%;">
                     <div class="font-weight-bold {{appTheme['text-muted']}} cursor-pointer mr-2">
                         <span class="fa fa-question-circle"></span>
                         Support
